[package]
name = "rust_echo"
version = "0.1.0"
authors = ["Matt Anger <AngerMCS@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = "0.30"
tokio = { version = "1", features = ["macros"] }
serde = "1"
serde_json = "1"
multimap = "0.8.3"
