[package]
name = "rust_echo"
version = "0.1.0"
authors = ["Matt Anger <AngerMCS@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "*", features = ["quinn"] }
tokio = { version = "1", features = ["macros"] }
serde = "1"
serde_json = "1"
