[package]
name = "rust_echo"
version = "0.1.0"
authors = ["Matt Anger <AngerMCS@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "*", features = ["quinn", "test"] }
tokio = { version = "*", features = ["macros"] }
serde = "1"
serde_json = "1"
